# semantic-commands

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
examples/: axum.rs  basic.rs  cli.rs
examples/tasks/: mod.rs
src/: cache.rs  command.rs  embedder.rs  input.rs  lib.rs  semantic_commands.rs
src/caches/: in_memory.rs  mod.rs  no_cache.rs  postgres.rs
src/embedders/: openai.rs
src/storages/: mod.rs  postgres.rs
